# tinypng-cli

./: .gitignore  .npmrc  Cargo.toml  LICENSE  Makefile  README.md  install.sh  package.json
.github/workflows/: ci.yml  release.yml
scripts/: install.js  run.js
skills/tinypng/: SKILL.md  commands.md  error-handling.md  examples.md
src/: cli.rs  compress.rs  config.rs  error.rs  lib.rs  main.rs  runner.rs  scan.rs  test_support.rs
src/commands/: config.rs  keys.rs  mod.rs  run.rs
src/keys/: mod.rs  rotation.rs
src/output/: human.rs  json.rs  mod.rs
tests/: contract_stable.rs  e2e_cli.rs  integration_compress.rs  integration_output_contract.rs  integration_runner.rs  integration_scan.rs
