[package]
name = "tinypng-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Fast batch image compression powered by TinyPNG, built for humans and AI."
license = "MIT"
repository = "https://github.com/aototo/tinypng-cli"
homepage = "https://github.com/aototo/tinypng-cli"
authors = ["aototo"]
keywords = ["tinypng", "image", "compression", "cli", "png"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[[bin]]
name = "tinypng"
path = "src/main.rs"

[lib]
name = "tinypng_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2.5"
indicatif = "0.17"
owo-colors = "4"
thiserror = "1"
anyhow = "1"
directories = "5"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
